# astral-tl

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: format.yml  publish.yml  test.yml
fuzz/: Cargo.toml  README.md
src/: lib.rs  stream.rs  tests.rs  util.rs  vdom.rs
src/inline/: hashmap.rs  vec.rs
src/parser/: base.rs  tag.rs
src/queryselector/: parser.rs  selector.rs
src/simd/: aarch64.rs  fallback.rs  mod.rs  nightly.rs  stable.rs  x86_64.rs
